Improves Windows update plugin

--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -1662,7 +1662,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             order = 99
         }
         "-WarningPl" = {
-            description = "Threshold on which the plugin will return 'WARNING' for possible packet loss in %"
+            description = "Threshold on which the plugin will return 'WARNING' for the response time in ms"
             value = "$IcingaCheckICMP_Object_WarningPl$"
             order = 4
         }
@@ -1852,7 +1852,7 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
             order = 7
         }
         "-WarningTotal" = {
-            description = "A warning threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            description = "A warning threshold for the shares total free space in byte units, like '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
             value = "$IcingaCheckUNCPath_Object_WarningTotal$"
             order = 6
         }
@@ -1956,9 +1956,8 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
             order = 0
         }
         "-Verbosity" = {
-            description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
-            value = "$IcingaCheckUsedPartitionSpace_Int32_Verbosity$"
-            order = 6
+            value = "$IcingaCheckUsedPartitionSpace_Int_Verbosity$"
+            order = 5
         }
         "-ThresholdInterval" = {
             description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
@@ -1966,11 +1965,10 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
             order = 100
         }
         "-IgnoreEmptyChecks" = {
-            set_if = "$IcingaCheckUsedPartitionSpace_Switchparameter_IgnoreEmptyChecks$"
+            value = "$IcingaCheckUsedPartitionSpace_Switch_IgnoreEmptyChecks$"
             order = 99
         }
         "-Include" = {
-            description = "Used to specify an array of partitions to be included. If not set, the check expects that all not excluded partitions should be checked. e.g. 'C:','D:'"
             value = {{
                 var arr = macro("$IcingaCheckUsedPartitionSpace_Array_Include$");
                     if (len(arr) == 0) {
@@ -1989,28 +1987,25 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
                         }
                     ).join(",");
             }}
-            order = 4
-        }
-        "-Warning" = {
-            description = "Used to specify a Warning threshold. This can either be a byte-value type like '10GB' or a %-value, like '10%'"
-            value = "$IcingaCheckUsedPartitionSpace_Object_Warning$"
-            order = 2
-        }
-        "-Critical" = {
-            description = "Used to specify a Critical threshold. This can either be a byte-value type like '10GB' or a %-value, like '10%'"
-            value = "$IcingaCheckUsedPartitionSpace_Object_Critical$"
             order = 3
         }
+        "-Warning" = {
+            value = "$IcingaCheckUsedPartitionSpace_Object_Warning$"
+            order = 1
+        }
+        "-Critical" = {
+            value = "$IcingaCheckUsedPartitionSpace_Object_Critical$"
+            order = 2
+        }
         "-NoPerfData" = {
-            set_if = "$IcingaCheckUsedPartitionSpace_Switchparameter_NoPerfData$"
+            value = "$IcingaCheckUsedPartitionSpace_Switch_NoPerfData$"
             order = 99
         }
         "-CheckUsedSpace" = {
-            set_if = "$IcingaCheckUsedPartitionSpace_Switchparameter_CheckUsedSpace$"
+            value = "$IcingaCheckUsedPartitionSpace_Switch_CheckUsedSpace$"
             order = 99
         }
         "-Exclude" = {
-            description = "Used to specify an array of partitions to be excluded. e.g. 'C:','D:'"
             value = {{
                 var arr = macro("$IcingaCheckUsedPartitionSpace_Array_Exclude$");
                     if (len(arr) == 0) {
@@ -2029,17 +2024,13 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
                         }
                     ).join(",");
             }}
-            order = 5
+            order = 4
         }
         "-SkipUnknown" = {
-            set_if = "$IcingaCheckUsedPartitionSpace_Switchparameter_SkipUnknown$"
+            value = "$IcingaCheckUsedPartitionSpace_Switch_SkipUnknown$"
             order = 99
         }
     }
-    vars.IcingaCheckUsedPartitionSpace_Switchparameter_SkipUnknown = false
-    vars.IcingaCheckUsedPartitionSpace_Switchparameter_IgnoreEmptyChecks = false
-    vars.IcingaCheckUsedPartitionSpace_Switchparameter_NoPerfData = false
-    vars.IcingaCheckUsedPartitionSpace_Switchparameter_CheckUsedSpace = false
 }
 
 object CheckCommand "Invoke-IcingaCheckService" {
@@ -2438,21 +2429,66 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
     import "PowerShell Base"
 
     arguments += {
-        "-C" = {
-            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; Write-Output 'Error:' $$($$_.Exception.Message)Components:`r`n$$( Get-Module -ListAvailable 'icinga-powershell-*' )`r`n'Module-Path:'`r`n$$($$Env:PSModulePath); exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckUpdates' "
-            order = 0
+        "-WarningRollups" = {
+            description = "The warning threshold for the rollup update count on the Windows machine"
+            value = "$IcingaCheckUpdates_Object_WarningRollups$"
+            order = 7
         }
         "-Verbosity" = {
             description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
             value = "$IcingaCheckUpdates_Int32_Verbosity$"
-            order = 5
+            order = 13
+        }
+        "-NoPerfData" = {
+            set_if = "$IcingaCheckUpdates_Switchparameter_NoPerfData$"
+            order = 99
+        }
+        "-CriticalOther" = {
+            description = "The critical threshold for the total pending update count on the Windows machine"
+            value = "$IcingaCheckUpdates_Object_CriticalOther$"
+            order = 12
+        }
+        "-C" = {
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; Write-Output 'Error:' $$($$_.Exception.Message)Components:`r`n$$( Get-Module -ListAvailable 'icinga-powershell-*' )`r`n'Module-Path:'`r`n$$($$Env:PSModulePath); exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckUpdates' "
+            order = 0
+        }
+        "-WarningDefender" = {
+            description = "The warning threshold for the Microsoft Defender update count on the Windows machine"
+            value = "$IcingaCheckUpdates_Object_WarningDefender$"
+            order = 9
         }
         "-ThresholdInterval" = {
             description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
             value = "$IcingaCheckUpdates_String_ThresholdInterval$"
             order = 100
         }
+        "-WarningOther" = {
+            description = "The warning threshold for all other updates on the Windows machine"
+            value = "$IcingaCheckUpdates_Object_WarningOther$"
+            order = 11
+        }
+        "-Warning" = {
+            description = "The warning threshold for the total pending update count on the Windows machine"
+            value = "$IcingaCheckUpdates_Object_Warning$"
+            order = 3
+        }
+        "-CriticalDefender" = {
+            description = "The critical threshold for the total pending update count on the Windows machine"
+            value = "$IcingaCheckUpdates_Object_CriticalDefender$"
+            order = 10
+        }
+        "-CriticalRollups" = {
+            description = "The critical threshold for the total pending update count on the Windows machine"
+            value = "$IcingaCheckUpdates_Object_CriticalRollups$"
+            order = 8
+        }
+        "-Critical" = {
+            description = "The critical threshold for the total pending update count on the Windows machine"
+            value = "$IcingaCheckUpdates_Object_Critical$"
+            order = 4
+        }
         "-UpdateFilter" = {
+            description = "Allows to filter for names of updates being included in the total update count, allowing a specific monitoring and filtering of certain updates beyond the provided categories"
             value = {{
                 var arr = macro("$IcingaCheckUpdates_Array_UpdateFilter$");
                     if (len(arr) == 0) {
@@ -2473,19 +2509,15 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             }}
             order = 2
         }
-        "-Warning" = {
-            description = "Used to specify a Warning threshold. In this case an integer value."
-            value = "$IcingaCheckUpdates_Object_Warning$"
-            order = 3
+        "-WarningSecurity" = {
+            description = "The warning threshold for the security update count on the Windows machine"
+            value = "$IcingaCheckUpdates_Object_WarningSecurity$"
+            order = 5
         }
-        "-Critical" = {
-            description = "Used to specify a Critical threshold. In this case an integer value."
-            value = "$IcingaCheckUpdates_Object_Critical$"
-            order = 4
-        }
-        "-NoPerfData" = {
-            set_if = "$IcingaCheckUpdates_Switchparameter_NoPerfData$"
-            order = 99
+        "-CriticalSecurity" = {
+            description = "The critical threshold for the total pending update count on the Windows machine"
+            value = "$IcingaCheckUpdates_Object_CriticalSecurity$"
+            order = 6
         }
     }
     vars.IcingaCheckUpdates_Switchparameter_NoPerfData = false
