--- a/config/icinga/Invoke-IcingaCheckUpdates.conf
+++ b/config/icinga/Invoke-IcingaCheckUpdates.conf
@@ -2,21 +2,66 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
     import "PowerShell Base"
 
     arguments += {
-        "-C" = {
-            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; Write-Output 'Error:' $$($$_.Exception.Message)Components:`r`n$$( Get-Module -ListAvailable 'icinga-powershell-*' )`r`n'Module-Path:'`r`n$$($$Env:PSModulePath); exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckUpdates' "
-            order = 0
+        "-WarningRollups" = {
+            description = "The warning threshold for the rollup update count on the Windows machine"
+            value = "$IcingaCheckUpdates_Object_WarningRollups$"
+            order = 7
         }
         "-Verbosity" = {
             description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
             value = "$IcingaCheckUpdates_Int32_Verbosity$"
-            order = 5
+            order = 13
+        }
+        "-NoPerfData" = {
+            set_if = "$IcingaCheckUpdates_Switchparameter_NoPerfData$"
+            order = 99
+        }
+        "-CriticalOther" = {
+            description = "The critical threshold for the total pending update count on the Windows machine"
+            value = "$IcingaCheckUpdates_Object_CriticalOther$"
+            order = 12
+        }
+        "-C" = {
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; Write-Output 'Error:' $$($$_.Exception.Message)Components:`r`n$$( Get-Module -ListAvailable 'icinga-powershell-*' )`r`n'Module-Path:'`r`n$$($$Env:PSModulePath); exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckUpdates' "
+            order = 0
+        }
+        "-WarningDefender" = {
+            description = "The warning threshold for the Microsoft Defender update count on the Windows machine"
+            value = "$IcingaCheckUpdates_Object_WarningDefender$"
+            order = 9
         }
         "-ThresholdInterval" = {
             description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
             value = "$IcingaCheckUpdates_String_ThresholdInterval$"
             order = 100
         }
+        "-WarningOther" = {
+            description = "The warning threshold for all other updates on the Windows machine"
+            value = "$IcingaCheckUpdates_Object_WarningOther$"
+            order = 11
+        }
+        "-Warning" = {
+            description = "The warning threshold for the total pending update count on the Windows machine"
+            value = "$IcingaCheckUpdates_Object_Warning$"
+            order = 3
+        }
+        "-CriticalDefender" = {
+            description = "The critical threshold for the total pending update count on the Windows machine"
+            value = "$IcingaCheckUpdates_Object_CriticalDefender$"
+            order = 10
+        }
+        "-CriticalRollups" = {
+            description = "The critical threshold for the total pending update count on the Windows machine"
+            value = "$IcingaCheckUpdates_Object_CriticalRollups$"
+            order = 8
+        }
+        "-Critical" = {
+            description = "The critical threshold for the total pending update count on the Windows machine"
+            value = "$IcingaCheckUpdates_Object_Critical$"
+            order = 4
+        }
         "-UpdateFilter" = {
+            description = "Allows to filter for names of updates being included in the total update count, allowing a specific monitoring and filtering of certain updates beyond the provided categories"
             value = {{
                 var arr = macro("$IcingaCheckUpdates_Array_UpdateFilter$");
                     if (len(arr) == 0) {
@@ -37,19 +82,15 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             }}
             order = 2
         }
-        "-Warning" = {
-            description = "Used to specify a Warning threshold. In this case an integer value."
-            value = "$IcingaCheckUpdates_Object_Warning$"
-            order = 3
+        "-WarningSecurity" = {
+            description = "The warning threshold for the security update count on the Windows machine"
+            value = "$IcingaCheckUpdates_Object_WarningSecurity$"
+            order = 5
         }
-        "-Critical" = {
-            description = "Used to specify a Critical threshold. In this case an integer value."
-            value = "$IcingaCheckUpdates_Object_Critical$"
-            order = 4
-        }
-        "-NoPerfData" = {
-            set_if = "$IcingaCheckUpdates_Switchparameter_NoPerfData$"
-            order = 99
+        "-CriticalSecurity" = {
+            description = "The critical threshold for the total pending update count on the Windows machine"
+            value = "$IcingaCheckUpdates_Object_CriticalSecurity$"
+            order = 6
         }
     }
     vars.IcingaCheckUpdates_Switchparameter_NoPerfData = false
