Fixes cert plugin CertStore enforcement

--- a/config/icinga/Invoke-IcingaCheckCertificate.conf
+++ b/config/icinga/Invoke-IcingaCheckCertificate.conf
@@ -63,7 +63,7 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
             order = 100
         }
         "-CertStore" = {
-            description = "Used to specify which CertStore to check. Valid choices are '*', 'LocalMachine', 'CurrentUser'"
+            description = "Used to specify which CertStore to check. Valid choices are 'None', '*', 'LocalMachine', 'CurrentUser'. Use 'None' if you do not want to check the certificate store (Default)"
             value = "$IcingaCheckCertificate_String_CertStore$"
             order = 5
         }
