Adds feature to check pending reboot on updates

--- a/config/icinga/Invoke-IcingaCheckUpdates.conf
+++ b/config/icinga/Invoke-IcingaCheckUpdates.conf
@@ -12,6 +12,10 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             value = "$IcingaCheckUpdates_Int32_Verbosity$"
             order = 13
         }
+        "-WarnOnReboot" = {
+            set_if = "$IcingaCheckUpdates_Switchparameter_WarnOnReboot$"
+            order = 99
+        }
         "-NoPerfData" = {
             set_if = "$IcingaCheckUpdates_Switchparameter_NoPerfData$"
             order = 99
@@ -73,6 +77,10 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             value = "$IcingaCheckUpdates_Object_Critical$"
             order = 4
         }
+        "-CritOnReboot" = {
+            set_if = "$IcingaCheckUpdates_Switchparameter_CritOnReboot$"
+            order = 99
+        }
         "-UpdateFilter" = {
             description = "Allows to filter for names of updates being included in the total update count, allowing a specific monitoring and filtering of certain updates beyond the provided categories"
             value = {{
@@ -108,4 +116,6 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
         }
     }
     vars.IcingaCheckUpdates_Switchparameter_NoPerfData = false
+    vars.IcingaCheckUpdates_Switchparameter_CritOnReboot = false
+    vars.IcingaCheckUpdates_Switchparameter_WarnOnReboot = false
 }
