--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -3462,6 +3462,10 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             value = "$IcingaCheckUpdates_Int32_Verbosity$"
             order = 13
         }
+        "-WarnOnReboot" = {
+            set_if = "$IcingaCheckUpdates_Switchparameter_WarnOnReboot$"
+            order = 99
+        }
         "-NoPerfData" = {
             set_if = "$IcingaCheckUpdates_Switchparameter_NoPerfData$"
             order = 99
@@ -3523,6 +3527,10 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             value = "$IcingaCheckUpdates_Object_Critical$"
             order = 4
         }
+        "-CritOnReboot" = {
+            set_if = "$IcingaCheckUpdates_Switchparameter_CritOnReboot$"
+            order = 99
+        }
         "-UpdateFilter" = {
             description = "Allows to filter for names of updates being included in the total update count, allowing a specific monitoring and filtering of certain updates beyond the provided categories"
             value = {{
@@ -3558,6 +3566,8 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
         }
     }
     vars.IcingaCheckUpdates_Switchparameter_NoPerfData = false
+    vars.IcingaCheckUpdates_Switchparameter_CritOnReboot = false
+    vars.IcingaCheckUpdates_Switchparameter_WarnOnReboot = false
 }
 
 object CheckCommand "Invoke-IcingaCheckProcessCount" {
