--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -1701,7 +1701,7 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
                 }
                 return ("'" + str + "'");
             }}
-            order = 8
+            order = 9
         }
         "-CriticalNextRunTime" = {
             set_if = {{
@@ -1719,7 +1719,7 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
                 }
                 return ("'" + str + "'");
             }}
-            order = 9
+            order = 10
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckScheduledTask_Switchparameter_NoPerfData$"
@@ -1750,7 +1750,7 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
         "-WarningMissedRuns" = {
             description = "Defines a warning threshold for missed runs for filtered tasks.  Supports Icinga default threshold syntax."
             value = "$IcingaCheckScheduledTask_Object_WarningMissedRuns$"
-            order = 4
+            order = 5
         }
         "-IgnoreLastRunTime" = {
             set_if = "$IcingaCheckScheduledTask_Switchparameter_IgnoreLastRunTime$"
@@ -1795,12 +1795,35 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
                 }
                 return ("'" + str + "'");
             }}
-            order = 7
+            order = 8
+        }
+        "-IgnoreExitCodes" = {
+            description = "A list of exit codes which will be considered as [OK]. By default every task which did not exit with 0 will be handled as critical."
+            value = {{
+                var arr = macro("$IcingaCheckScheduledTask_Array_IgnoreExitCodes$");
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                            x;
+                        } else {
+                            "'" + x + "'";
+                        }
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
+            }}
+            order = 4
         }
         "-CriticalMissedRuns" = {
             description = "Defines a critical threshold for missed runs for filtered tasks.  Supports Icinga default threshold syntax."
             value = "$IcingaCheckScheduledTask_Object_CriticalMissedRuns$"
-            order = 5
+            order = 6
         }
         "-State" = {
             description = "The state a task should currently have for the plugin to return [OK]"
@@ -1828,7 +1851,7 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
         "-Verbosity" = {
             description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
             value = "$IcingaCheckScheduledTask_Int32_Verbosity$"
-            order = 10
+            order = 11
         }
         "-WarningLastRunTime" = {
             set_if = {{
@@ -1846,7 +1869,7 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
                 }
                 return ("'" + str + "'");
             }}
-            order = 6
+            order = 7
         }
     }
     vars.IcingaCheckScheduledTask_Switchparameter_NoPerfData = false
@@ -3453,7 +3476,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
 
     arguments += {
         "-WarningRollups" = {
-            description = "The warning threshold for the rollup update count on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningRollups$"
             order = 7
         }
@@ -3471,7 +3494,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 99
         }
         "-CriticalOther" = {
-            description = "The critical threshold for the total pending update count on the Windows machine"
+            description = "The critical threshold for all other updates on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalOther$"
             order = 12
         }
@@ -3503,7 +3526,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 100
         }
         "-WarningOther" = {
-            description = "The warning threshold for all other updates on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningOther$"
             order = 11
         }
@@ -3513,7 +3536,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 3
         }
         "-CriticalDefender" = {
-            description = "The critical threshold for the total pending update count on the Windows machine"
+            description = "The critical threshold for the Microsoft Defender update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalDefender$"
             order = 10
         }
@@ -3555,12 +3578,12 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 2
         }
         "-WarningSecurity" = {
-            description = "The warning threshold for the security update count on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningSecurity$"
             order = 5
         }
         "-CriticalSecurity" = {
-            description = "The critical threshold for the total pending update count on the Windows machine"
+            description = "The critical threshold for the security update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalSecurity$"
             order = 6
         }
