Adds flag for UNKNOWN to CRITICAL on HTTP errors

--- a/config/icinga/Invoke-IcingaCheckHTTPStatus.conf
+++ b/config/icinga/Invoke-IcingaCheckHTTPStatus.conf
@@ -233,7 +233,12 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
             }}
             order = 4
         }
+        "-ConnectionErrAsCrit" = {
+            set_if = "$IcingaCheckHTTPStatus_Switchparameter_ConnectionErrAsCrit$"
+            order = 99
+        }
     }
+    vars.IcingaCheckHTTPStatus_Switchparameter_ConnectionErrAsCrit = false
     vars.IcingaCheckHTTPStatus_Switchparameter_Negate = false
     vars.IcingaCheckHTTPStatus_Switchparameter_NoPerfData = false
     vars.IcingaCheckHTTPStatus_Switchparameter_AddOutputContent = false
