--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -770,7 +770,12 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
             }}
             order = 4
         }
+        "-ConnectionErrAsCrit" = {
+            set_if = "$IcingaCheckHTTPStatus_Switchparameter_ConnectionErrAsCrit$"
+            order = 99
+        }
     }
+    vars.IcingaCheckHTTPStatus_Switchparameter_ConnectionErrAsCrit = false
     vars.IcingaCheckHTTPStatus_Switchparameter_Negate = false
     vars.IcingaCheckHTTPStatus_Switchparameter_NoPerfData = false
     vars.IcingaCheckHTTPStatus_Switchparameter_AddOutputContent = false
@@ -2283,7 +2288,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             order = 99
         }
         "-CriticalPl" = {
-            description = "Threshold on which the plugin will return 'CRITICAL' for possible packet loss in %"
+            description = "Threshold on which the plugin will return 'CRITICAL' for the response time in ms"
             value = "$IcingaCheckICMP_Object_CriticalPl$"
             order = 5
         }
@@ -3448,7 +3453,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
 
     arguments += {
         "-WarningRollups" = {
-            description = "The warning threshold for the total pending update count on the Windows machine"
+            description = "The warning threshold for the rollup update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningRollups$"
             order = 7
         }
@@ -3462,7 +3467,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 99
         }
         "-CriticalOther" = {
-            description = "The critical threshold for all other updates on the Windows machine"
+            description = "The critical threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalOther$"
             order = 12
         }
@@ -3494,7 +3499,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 100
         }
         "-WarningOther" = {
-            description = "The warning threshold for the total pending update count on the Windows machine"
+            description = "The warning threshold for all other updates on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningOther$"
             order = 11
         }
@@ -3509,7 +3514,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 10
         }
         "-CriticalRollups" = {
-            description = "The critical threshold for the rollup update count on the Windows machine"
+            description = "The critical threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalRollups$"
             order = 8
         }
@@ -3547,7 +3552,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 5
         }
         "-CriticalSecurity" = {
-            description = "The critical threshold for the security update count on the Windows machine"
+            description = "The critical threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalSecurity$"
             order = 6
         }
