Adds include/exclude filter for perfcounter plugin

--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -2035,7 +2035,7 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
             order = 8
         }
         "-CriticalTotal" = {
-            description = "A critical threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            description = "A warning threshold for the shares total free space in byte units, like '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
             value = "$IcingaCheckUNCPath_Object_CriticalTotal$"
             order = 7
         }
@@ -2101,7 +2101,7 @@ object CheckCommand "Invoke-IcingaCheckPerfCounter" {
         "-Verbosity" = {
             description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
             value = "$IcingaCheckPerfCounter_Int32_Verbosity$"
-            order = 5
+            order = 7
         }
         "-Warning" = {
             description = "Used to specify a Warning threshold."
@@ -2112,6 +2112,28 @@ object CheckCommand "Invoke-IcingaCheckPerfCounter" {
             set_if = "$IcingaCheckPerfCounter_Switchparameter_IgnoreEmptyChecks$"
             order = 99
         }
+        "-ExcludeCounter" = {
+            description = "An [array] of strings to filter for, excluding the provided counters. Allows wildcard '*' usage"
+            value = {{
+                var arr = macro("$IcingaCheckPerfCounter_Array_ExcludeCounter$");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
+            }}
+            order = 6
+        }
         "-Critical" = {
             description = "Used to specify a Critical threshold."
             value = "$IcingaCheckPerfCounter_Object_Critical$"
@@ -2120,6 +2142,28 @@ object CheckCommand "Invoke-IcingaCheckPerfCounter" {
         "-NoPerfData" = {
             set_if = "$IcingaCheckPerfCounter_Switchparameter_NoPerfData$"
             order = 99
+        }
+        "-IncludeCounter" = {
+            description = "An [array] of strings to filter for, only including the provided counters. Allows wildcard '*' usage"
+            value = {{
+                var arr = macro("$IcingaCheckPerfCounter_Array_IncludeCounter$");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
+            }}
+            order = 5
         }
         "-ThresholdInterval" = {
             description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
@@ -2627,7 +2671,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
 
     arguments += {
         "-WarningRollups" = {
-            description = "The warning threshold for the rollup update count on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningRollups$"
             order = 7
         }
@@ -2641,7 +2685,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 99
         }
         "-CriticalOther" = {
-            description = "The critical threshold for the total pending update count on the Windows machine"
+            description = "The critical threshold for all other updates on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalOther$"
             order = 12
         }
@@ -2660,7 +2704,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 100
         }
         "-WarningOther" = {
-            description = "The warning threshold for all other updates on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningOther$"
             order = 11
         }
@@ -2670,7 +2714,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 3
         }
         "-CriticalDefender" = {
-            description = "The critical threshold for the Microsoft Defender update count on the Windows machine"
+            description = "The critical threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalDefender$"
             order = 10
         }
