Adds support for thumbprint exclude for cert plugin

--- a/config/icinga/Invoke-IcingaCheckCertificate.conf
+++ b/config/icinga/Invoke-IcingaCheckCertificate.conf
@@ -72,7 +72,7 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
             order = 99
         }
         "-ExcludePattern" = {
-            description = "Used to specify an array of exclusions, tested against Subject, Subject Alternative Name and Issuer."
+            description = "Used to specify an array of exclusions, tested against Subject, Subject Alternative Name, Issuer and Thumbprint."
             value = {{
                 var arr = macro("$IcingaCheckCertificate_Array_ExcludePattern$");
                     if (len(arr) == 0) {
