--- a/config/icinga/Invoke-IcingaCheckNetworkInterface.conf
+++ b/config/icinga/Invoke-IcingaCheckNetworkInterface.conf
@@ -113,7 +113,7 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
             order = 24
         }
         "-IncludeNetworkDevice" = {
-            description = "Specify the index of network adapters you want to include for checks. Example 4, 3"
+            description = "Specify the index id, interface name or connection name of network adapters you want to include for checks. Example 4, 3, *LAN*, *Ethernet*"
             value = {{
                 var arr = macro("$IcingaCheckNetworkInterface_Array_IncludeNetworkDevice$");
                 if (len(arr) == 0) {
@@ -214,7 +214,7 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
             order = 31
         }
         "-ExcludeNetworkDevice" = {
-            description = "Specify the index of network adapters you want to exclude for checks. Example 4, 3"
+            description = "Specify the index id, interface name or connection name of network adapters you want to exclude for checks. Example 4, 3, *LAN*, *Ethernet*"
             value = {{
                 var arr = macro("$IcingaCheckNetworkInterface_Array_ExcludeNetworkDevice$");
                 if (len(arr) == 0) {
