--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -2035,7 +2035,7 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
             order = 24
         }
         "-IncludeNetworkDevice" = {
-            description = "Specify the index of network adapters you want to include for checks. Example 4, 3"
+            description = "Specify the index id, interface name or connection name of network adapters you want to include for checks. Example 4, 3, *LAN*, *Ethernet*"
             value = {{
                 var arr = macro("$IcingaCheckNetworkInterface_Array_IncludeNetworkDevice$");
                 if (len(arr) == 0) {
@@ -2136,7 +2136,7 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
             order = 31
         }
         "-ExcludeNetworkDevice" = {
-            description = "Specify the index of network adapters you want to exclude for checks. Example 4, 3"
+            description = "Specify the index id, interface name or connection name of network adapters you want to exclude for checks. Example 4, 3, *LAN*, *Ethernet*"
             value = {{
                 var arr = macro("$IcingaCheckNetworkInterface_Array_ExcludeNetworkDevice$");
                 if (len(arr) == 0) {
